--- a/ex5.html
+++ b/ex5.html
@@ -7,28 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Comparison operators & Boolean</h1>
-    <h2>===</h2>
-    <h3>1===1</h3>
-    <script>
-        document.write(1===1);
-    </script>
+    <h1>array</h1>
+    <h2>syntax</h2>
 
-    <h3>1===2</h3>
     <script>
-        document.write(1===2);
-    </script>
-
-
-    <h3>1&lt;2</h3>
-    <script>
-        document.write(1<2);
-    </script>
-
-    <h3>1&lt;2</h3>
-    <script>
-        document.write(1<1);
+        const control = ["go", "stop"];
     </script>
     
+    <h2>get</h2>
+    <script>
+        document.write(control[0]);
+        document.write(control[1]);
+    </script>
+
+    <h2>add</h2>
+    <script>
+    control.push("wow");
+    </script>
+
+    <h2>count</h2>
+    <script>
+        document.write(control.length);
+    </script>
+
+
 </body>
 </html>
