--- a/real exercise2.html
+++ b/real exercise2.html
@@ -15,10 +15,24 @@
     target.style.background = 'black';
     target.style.color = 'white';
     this.value = 'day';
+
+    const alist = document.querySelectorAll('a');
+    let i = 0;
+    while(i < alist.length){
+        alist[i].style.color = 'powderblue';
+        i = i + 1;
+    }
     } else {
     target.style.background = 'white';
     target.style.color = 'black';
     this.value = 'night';
+
+    const alist = document.querySelectorAll('a');
+    let i = 0;
+    while(i < alist.length){
+        alist[i].style.color = 'blue';
+        i = i + 1;
+    }
     }
     ">
 
