--- a/real exercise2.html
+++ b/real exercise2.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
-</head>
-<body data-mode="day">
-    <h1>WEB</h1>
 
-    <input id="night_day" type="button" value="night" onclick="
+    <script>
+    function nightdayhandler(self){
     const target = document.querySelector('body');
     if (this.value === 'night'){
     target.style.background = 'black';
@@ -34,6 +32,20 @@
         i = i + 1;
     }
     }
+    }
+    </script>
+
+</head>
+<body>
+    <h1><a href="#">WEB</a></h1>
+    <input
+
+    <input id="night_day" type="button" value="night" onclick="
+    nightdayhandler(this);
+    ">
+    
+    <input id="night_day" type="button" value="day" onclick="
+    nightdayhandler(this);
     ">
 
     <ol>
