--- a/func1.html
+++ b/func1.html
@@ -24,9 +24,15 @@
     <h2>parameter & argument</h2>
     <script>
         function onePlusOne(){
-        document.write(1+1);
+        document.write(1+1+'<br>');
         }
         onePlusOne();
+
+        function sum(a, b){
+            document.write(a + b + '<br>');
+        }
+        sum(2,3);
+        sum(3,4);
     </script>
     <h2>return</h2>
 </body>
