--- a/real exercise2.html
+++ b/real exercise2.html
@@ -9,10 +9,10 @@
     <script>
     function nightdayhandler(self){
     const target = document.querySelector('body');
-    if (this.value === 'night'){
+    if (self.value === 'night'){
     target.style.background = 'black';
     target.style.color = 'white';
-    this.value = 'day';
+    self.value = 'day';
 
     const alist = document.querySelectorAll('a');
     let i = 0;
@@ -23,7 +23,7 @@
     } else {
     target.style.background = 'white';
     target.style.color = 'black';
-    this.value = 'night';
+    self.value = 'night';
 
     const alist = document.querySelectorAll('a');
     let i = 0;
@@ -41,10 +41,6 @@
     <input
 
     <input id="night_day" type="button" value="night" onclick="
-    nightdayhandler(this);
-    ">
-    
-    <input id="night_day" type="button" value="day" onclick="
     nightdayhandler(this);
     ">
 
