jquery + css + onload

--- a/GOOD!.html
+++ b/GOOD!.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GOOD!</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="color.js"></script>
+    <script src="font.js"></script>
   </head>
   <body>
     <h1><a href="#">WEB</a></h1>
+    <h1>font-size</h1>
+    <!-- <script src="font.js"></script> -->
     <input
       id="night_day"
       type="button"
